as given to heckman may 26

--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -1,22 +1,22 @@
-In this paper, we focus on testing treatment effects within categories of outcomes or across all available outcomes. This is a powerful, comprehensive tool that allows us to summarize the impact of ABC/CARE and avoid problems such a cherry-picking statistically significant results. It has the downside of obscuring the interpretation of the magnitudes of the treatment effects in each of the outcomes of interest. To be as inclusive as possible, we categorize our outcomes and obtain a principal component per category. This principal component is a ``latent'' variable describing each category for which we can calculate treatment effects.
+This section presents the treatment effects. To be as inclusive as possible, we categorize our outcomes and present estimates pooling within each category. Treatment effects on individual variables are listed in Appendix~\ref{appendix:results}.
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Combining Functions and Non-Parametric, Exact Tests \textbf{[AZ: Signficance and \% Significant will change with more bootstraps.}} \label{table:massiveall}
+\caption{Combining Functions and Non-Parametric, Exact Tests} \label{table:massiveall}
 \centering
 \input{output/raw-rosenbaum-table-cats-exp-TvC-updated-10-10.tex} 
 \begin{tablenotes}
 \footnotesize
-\item \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. Each of the panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. We test these three statistics bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
+\item \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. Each of the panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
-We consider the outcomes reported in Appendix~\ref{appendix:gdiff-tes}. In Table~\ref{table:summary}, we classify these outcomes by age to preview our results, aggregating outcomes within ages and across categories. In Table~\ref{table:massiveall}, we aggregate across ages and within categories. The benefits of random assignment to treatment are noticeable for both males and females. The benefits appear across the life cycle and across multiple outcomes. Participants of ABC/CARE benefit in terms of skills, both cognitive and socio-emotional. They also benefit in terms of achievement tests, which help measure both cognitive and non-cognitive skills \citep{Almlund_Duckworth_etal_2011_ecoval}. The magnitudes of these effects hint at a female advantage in the program's effect on skill development.
+We consider the outcomes reported in Appendix~\ref{appendix:gdiff-tes}. In Table~\ref{table:summary}, we classify these outcomes by age to preview our results, aggregating outcomes within ages and across categories. In Table~\ref{table:massiveall}, we aggregate across ages and within categories. The benefits of random assignment to treatment are noticeable for both males and females. The benefits appear across the life cycle and across multiple outcomes. Participants of ABC/CARE benefit in terms of skills, both cognitive and socio-emotional. They also benefit in terms of achievement tests, which help measure both cognitive and non-cognitive skills \citep{Almlund_Duckworth_etal_2011_ecoval}. The magnitudes of these effects indicate a female advantage in the program's effect on skill development.
 
-ABC/CARE had childcare, and thus facilitated maternal employment and education. This facilitated maternal employment and education. The program has a sizable effect on mother labor, which aggregates parental labor income and employment across the life cycle. The effect size is 0.228 for females and about double that for males (0.445).\footnote{In most households, parental income and maternal income are the same: 75\% of children in the sample grew up in a household with a single mother.} This intergenerational effect is not only present in terms of parental income. It is also present in parenting, which aggregates HOME scores qualifying the relationship between the children and their mothers between ages 0 and 8. The magnitude of the effect for boys is smaller, in part due to the fact that the HOME measurement includes a subscale of punishment with more punishment being considered conducive to a negative environment. The families of boys scored lower in this subscale than the families of girls.
+ABC/CARE had childcare, and thus facilitated maternal employment and education. The program has a sizable effect on mother labor, which aggregates parental labor income and employment across the life cycle.\footnote{In Appendix~\ref{appendix:results}, we show the effects on mother's employment individually. Table~\ref{table:abccare_rslt_female_cat4} shows that the effect on females is large across ages compared to those who stayed at home. This is also seen for males (Table~\ref{table:abccare_rslt_male_cat4}), although the effect on males does not resist adjustments for multiple hypothesis testing (Table~\ref{table:abccare_rslt_male_cat4_sd}). The female results are robust (Table~\ref{table:abccare_rslt_female_cat4_sd}). This goes against the findings of \citet{Havnes_Mogstad_2011_JPE}, which find that subsidized child care does not increase maternal labor supply, but is consistent with several other studies finding an increase in maternal labor supply as a result of subsidized child care \citep{Bauernschuster_Schlotter_2015_JPE,Bettendorf_etal_2015_LE,Geyer_etal_2015_LE,Brilli_etal_2016_REH}.} The effect size is 0.228 for females and about double that for males, 0.445.\footnote{In most households, parental income and maternal income are the same: 75\% of children in the sample grew up in a household with a single mother.} This intergenerational effect is not only present in terms of parental income. It is also present in parenting, which aggregates HOME scores qualifying the relationship between the children and their mothers between ages 0 and 8. The magnitude of the effect for boys is smaller than for girls (0.06 vs. 0.274), in part due to the fact that the HOME measurement includes a subscale of punishment with more punishment being considered conducive to a negative environment. The families of boys scored lower in this subscale than the families of girls.
 
-In outcomes like education, employment, crime, risky behavior (which includes, for example, drug use) there is also a sizable effect. In our companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, we document that these effects translate into a benefit/cost ratio of $7.3$. This calculation accounts for the costs of implementing the program, including the welfare loss generated by taxing society in order to fund the program. 
+In outcomes like education, employment, crime, risky behavior (which includes, for example, drug use) there is also a sizable effect. In our companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, we document that these effects translate into a benefit/cost ratio of $7.3$. This calculation accounts for the costs of implementing the program, including the welfare loss generated by taxing society in order to fund the program.\footnote{One advantage of the benefit/cost analysis is that it intrinsically accounts for extreme values. For example, individual crimes are weighed by their social cost instead of the average crime being weighed.} 
 
 Consistent with the results in Table~\ref{table:summary}, the results in Table~\ref{table:massiveall} show that females benefit more from treatment if compared to males. In 7 out of the 10 categories that we consider, the within-category average effect size is larger for females. In 9 out of 10 categories, the proportion of positive effects is at least as large for males if compared to females. The same is true for the proportion of positive and significant effects, at the 10\% level. The comparison based on the \citet{Rosenbaum_2005_Distribution_JRSS} $p$-values is not as clear, which is one of the reasons why the gender difference deserves further assessment. We do so next.
 
