--- a/sections/6_conclusion.tex
+++ b/sections/6_conclusion.tex
@@ -4,5 +4,5 @@ We present results suggesting that lower-quality childcare arrangements are detr
 
 Another aspect of these finding relates to literature on the biological, psychological, and social differences between boys and girls early in life. \citet{Schore_2017_IMHJ} and \citet{Eliot_Brain_2009_BOOK} provide helpful summaries of the current literature. Although there is some contention on the exact biological differences (see, e.g., \citet{Tan_Ma_Marwha_etal_2016_NI} and \citet{Eliot_2011_Sex-Diff_Neuron}), our findings are consistent with previous research that finds boys to be more vulnerable early in life than girls as a result of a confluence of biological, psychological, and social factors \citep{Beeghly-etal_2017_IMHJ}. The alternative programs available at the time of ABC/CARE were of lower quality. A more vulnerable child could be harmed in an environment that does not fully support his development.
 
-Our analysis sounds a cautionary note about the value of early childcare programs. In the past decade, many politicians and pundits have warmly embraced early childhood programs as solutions for reducing inequality and promoting social mobility. Little attention has been paid to the quality of those programs. \cite{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} show that they have a high economic rate of return. This study shows that lower-quality early childhood programs can have harmful effects on child development, especially for boys, providing evidence on the benefits of high-quality programs.
+Our analysis sounds a cautionary note about the value of early childcare programs. In the past decade, many politicians and pundits have warmly embraced early childhood programs as solutions for reducing inequality and promoting social mobility. Little attention has been paid to the quality of those programs. \cite{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} show that they have a high economic rate of return. Even though we find that females benefit more than males overall, after weighing for the social benefits of reduced crime and improved health, education, and employment, the social return is higher for males than females. Although ABC/CARE had stronger effects on females, the monetary value of those effects are less than for males. 
 
