--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -41,7 +41,7 @@ Table~\ref{tab:abccare-baseline} compares pre-program variables for experimental
 
 Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups. For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program. Pairing was based on the High Risk Index, as well as maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.} 
 
-ABC collected an initial sample of 121 subjects. All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Encouragement from the referral agencies was such that all but one of the referred mothers agreed to participate in the initial randomization \textbf{[AZ: Jorge, should this be expanded upon?]} \citep{Ramey_Yeates_Short_1984_CD,Campbell_Ramey_1995_AERJ} \textbf{[JJH: Ramey is a bullshitter.][These papers specify that there was only one family who refused to participate.]}. We characterize each missing observation in Appendix~\ref{appendix:randomization}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard weighting (matching) methods described in Appendix~\ref{app:method_partialobs}. 
+ABC collected an initial sample of 121 subjects. All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Encouragement from the referral agencies was such that all but one of the referred mothers agreed to participate in the initial randomization \citep{Ramey_Yeates_Short_1984_CD,Campbell_Ramey_1995_AERJ} \textbf{[JJH: Ramey is a bullshitter.][These papers specify that there was only one family who refused to participate.]}. We characterize each missing observation in Appendix~\ref{appendix:randomization}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard weighting (matching) methods described in Appendix~\ref{app:method_partialobs}. 
 
 Twenty-two subjects in ABC did not stay in the program through age 5. The number of dropouts is evenly balanced across treatments and controls. Dropout was primarily related to the health of the child and the mobility of families rather than any dissatisfaction with the program. The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed \citep{Burchinal_Campbell_etal_1997_CD} \textbf{[JJH: I thought we had a letter from Burchinal -- see science 2014 paper.][\citet{Burchinal_Campbell_etal_1997_CD}  is cited in the appendix of \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and lists the attrition information.]}. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. Dropping out occurs \emph{after} randomization and is balanced across treatment groups. We conduct the same analysis for the CARE sample, although there were far fewer dropouts and no compromised randomization.\footnote{The modest sample size after dropouts, especially after dividing the sample by male and female, is unavoidable. No datasets have the experimental design and longitudinal data collection of ABC/CARE with a large sample. Future research should repeat these analyses in larger studies (e.g., the Infant Health and Development Program) as the subjects continue to age.} 
 
