DONE MUTHER FUCKER

--- a/AppResOutput/1_abccare_appendix_treatmenteffects.tex
+++ b/AppResOutput/1_abccare_appendix_treatmenteffects.tex
@@ -659,6 +659,8 @@
 
 \subsection{Treatment Effects for Pooled Sample, Step Down}
 
+In the tables with step down, we follow \citet{Romano_Wolf_2005_JASA} to account for multiple hypotheses. This method allows us to confirm that we are not falsely rejecting hypotheses by virtue of the number of hypotheses alone. 
+
 
 	\begin{table}[H]
      \caption{Treatment Effects on IQ Scores, Pooled Sample, Step Down}
