--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -12,7 +12,7 @@ This section presents the treatment effects. To be as inclusive as possible, we 
 \end{threeparttable}
 \end{table}
 
-We consider the outcomes reported in Appendix~\ref{appendix:gdiff-tes}. In Table~\ref{table:summary}, we classify these outcomes by age to preview our results, aggregating outcomes within ages and across categories. In Table~\ref{table:massiveall}, we aggregate across ages and within categories. The benefits of random assignment to treatment are noticeable for both males and females. The benefits appear across the life cycle and across multiple outcomes. Participants of ABC/CARE benefit in terms of skills, both cognitive and socio-emotional. They also benefit in terms of achievement tests, which help measure both cognitive and non-cognitive skills \citep{Almlund_Duckworth_etal_2011_ecoval}. The magnitudes of these effects indicate a female advantage in the program's effect on skill development.
+We consider the outcomes reported in Appendix~\ref{appendix:results}. In Table~\ref{table:summary}, we classify these outcomes by age to preview our results, aggregating outcomes within ages and across categories. In Table~\ref{table:massiveall}, we aggregate across ages and within categories. The benefits of random assignment to treatment are noticeable for both males and females. The benefits appear across the life cycle and across multiple outcomes. Participants of ABC/CARE benefit in terms of skills, both cognitive and socio-emotional. They also benefit in terms of achievement tests, which help measure both cognitive and non-cognitive skills \citep{Almlund_Duckworth_etal_2011_ecoval}. The magnitudes of these effects indicate a female advantage in the program's effect on skill development.
 
 ABC/CARE had childcare, and thus facilitated maternal employment and education. The program has a sizable effect on mother labor, which aggregates parental labor income and employment across the life cycle.\footnote{In Appendix~\ref{appendix:results}, we show the effects on mother's employment individually. Table~\ref{table:abccare_rslt_female_cat4} shows that the effect on females is large across ages compared to those who stayed at home. This is also seen for males (Table~\ref{table:abccare_rslt_male_cat4}), although the effect on males does not resist adjustments for multiple hypothesis testing (Table~\ref{table:abccare_rslt_male_cat4_sd}). The female results are robust (Table~\ref{table:abccare_rslt_female_cat4_sd}). This goes against the findings of \citet{Havnes_Mogstad_2011_JPE}, which find that subsidized child care does not increase maternal labor supply, but is consistent with several other studies finding an increase in maternal labor supply as a result of subsidized child care \citep{Bauernschuster_Schlotter_2015_JPE,Bettendorf_etal_2015_LE,Geyer_etal_2015_LE,Brilli_etal_2016_REH}.} The effect size is 0.228 for females and about double that for males, 0.445.\footnote{In most households, parental income and maternal income are the same: 75\% of children in the sample grew up in a household with a single mother.} This intergenerational effect is not only present in terms of parental income. It is also present in parenting, which aggregates HOME scores qualifying the relationship between the children and their mothers between ages 0 and 8. The magnitude of the effect for boys is smaller than for girls (0.06 vs. 0.274), in part due to the fact that the HOME measurement includes a subscale of punishment with more punishment being considered conducive to a negative environment. The families of boys scored lower in this subscale than the families of girls.
 
