--- a/Appendices/Results_treatmenteffects.tex
+++ b/Appendices/Results_treatmenteffects.tex
@@ -150,14 +150,40 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 
 \noindent In each of the tables for combining functions and treatment effect estimates, we present 8 different estimates. Column (1) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. Column (2) adjusts the estimates in (1) for attrition and controls for a set of covariates. Column (3) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who did not receive preschool alternatives. Column (4) adjusts the estimates in (3) for attrition and controls for a set of covariates. Column (5) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the subjects who are likely not to be enrolled in alternative preschools. Column (6) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who received preschool alternatives. Column (7) adjusts the estimates in (6) for attrition and controls for a set of covariates. Column (8) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely to be enrolled in alternative preschools. The results in bold are statistically significant at the 10\% level in a single-sided, non-parametric, bootstrapped test.\footnote{For the tables that present categorical combining function statistics that count the number of positive treatment effects that are significant at the 10\% level, two bootstrap tests are conducted. The first bootstrap test is used to determine significance at the 10\% level for each treatment effect. The second bootstrap test is used to determine whether the combined function statistic is significantly different from 10\% at the  10\% level. See Appendix~\ref{appendix:bootstrap} for more details on our inference procedures.} Columns (5) and (8) are standard kernel matching estimates. \\
 
-\noindent Beginning with Table~\ref{table:abccare_rslt_pooled_cat0}, we display treatment effects by outcome. We divide the tables by different blocks of related outcomes. able~\ref{table:treatfactors} summarizes treatment effects on the set of selected``latent'' outcomes that we estimate. We display the full set of estimates beginning with Table~\ref{table:abccare_rslt_pooled_cat0}, together with the corresponding outcomes underlying the latents that we estimate.
+\noindent Beginning with Table~\ref{table:abccare_rslt_pooled_cat0}, we display treatment effects by outcome. We divide the tables by different blocks of related outcomes. Table~\ref{table:treatfactors} summarizes treatment effects on the set of selected``latent'' outcomes that we estimate. We display the full set of estimates beginning with Table~\ref{table:abccare_rslt_pooled_cat0}, together with the corresponding outcomes underlying the latents that we estimate.
+
+
+
+
+Table~\ref{table:treatfactors} displays the results. Column (1) is the parameter in Equation~\eqref{eq:meandiff}, which is identified by random assignment to treatment. Column (2) displays the same parameter controlling for baseline variables and accounting for attrition. The procedures to select the control variables and to account for attrition are in Appendices~\ref{appendix:methodology} and~\ref{appendix:results}. Column (3) displays estimates for the parameters in Equation~\eqref{eq:cont1}. Column (4) does so as well but controlling for baseline variables and accounting for attrition. Column (5) is analogous to Column (3), but estimating the parameters compared to those who attended alternative care. Column (6) controls for baseline variables and accounts for attrition. Columns (3) to (6) are relevant when explaining gender differences so we delay discussing them to Section~\ref{sec:gender-differences}.
+
+\begin{sidewaystable}[!htpb]
+\begin{threeparttable}
+\caption{Treatment Effects on Latent Outcomes} \label{table:treatfactors}
+\centering 
+\begin{tabularx}{22.5cm}{XcX}
+& \input{output/latent-tes-1000.tex} & 
+\end{tabularx}
+\begin{tablenotes}
+\footnotesize
+\item \textbf{Note:} This table shows the treatment effects for ``latent'' outcomes, constructed from various related outcomes to the latent. Each column present estimates for the following parameters: \textbf{(1)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | W = 1]$; {\textbf{(2)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B} \big]$}; {\textbf{(3)} $\mathbb{E} \big[ \bm{Y}^1 | D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | V=0, D=0 \big]$}; {\textbf{(4)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=0 \big] $}; {\textbf{(5)} $\mathbb{E} \big[ \bm{Y}^1 | D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | V=1, D = 0 \big]$}; {\textbf{(6)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=1 \big]$}. We account for the following background variables ($\bm{B}$): Apgar scores at minutes 1 and 5 and the high-risk index. We define the high-risk index in Appendix~\ref{appendix:background} and explain how we choose the control variables in Appendix~\ref{appendix:bvariables}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution (1,000 bootstraps). We highlight $p$-values significant at the $10\%$ level.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+
+The results in  Columns (1) and (2) of Table~\ref{table:treatfactors} reflect that ABC/CARE has substantial market and non-market benefits across the life-cycle. Recall that this inference is valid for all individuals in the population for whom $\bm{B} \in \mathcal{B}_0$ (i.e.,\ are at considerable socio-economic disadvantage). The latents for each category have an in-sample mean of $0$ and standard deviation of $1$. 
+
+The latent capturing measures of education increases by almost $1/2$ of a standard deviation for females even after accounting for baseline characteristics and attrition. For males, employment and hypertension are the latents that show the strongest improvement as a result of treatment. 
 
 %In each table we also present one or two factors constructed with the methodology in Appendix~\ref{app:endogeneity}. The idea behind doing this is to recover a ``latent'' outcome summarizing the outcomes in the table (e.g., latent IQ across IQ from ages 2 to 5). That is, measure the latent outcome using outcomes at various ages as measures of this latent. Testing for treatment effects on this factor it is yet another alternative to summarize treatment effects across a block of outcomes. T
 \doublespacing
 
+\clearpage
 
-\subsection{Non-parametric Tests}\ref{app:subsection-nonparametric-tests}
+\subsection{Non-parametric Tests}\label{app:subsection-nonparametric-tests}
 
+In the main paper, we present non-parametric tests with a more refined set of outcomes to remove extraneous outcomes and those that are not observed in CARE. Here, we display the same results with the full set of outcomes. 
 
 \begin{table}[h!]
 \centering
@@ -165,7 +191,7 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \caption{Age Summary of Treatment-Control Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-age-exp-TvC-big}
 \input{output/raw-rosenbaum-table-age-exp-TvC-big-20-10}
 \begin{tablenotes}
-\item Note:
+\item \tiny Note:  This table displays summaries of treatment effects by age and gender for the full set of outcomes. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution  across treatment status of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -176,7 +202,7 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \caption{Category Summary of Treatment-Control Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-cats-exp-TvC-big}
 \input{output/raw-rosenbaum-table-cats-exp-TvC-big-20-10}
 \begin{tablenotes}
-\item Note:
+\item  \tiny Note:  This table displays summaries of treatment effects by outcome category and gender for the full set of outcomes. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution  across treatment status of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -187,7 +213,7 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \caption{Age Summary of Treatment-Control (Stay at Home) Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-age-exp-TvCh-big}
 \input{output/raw-rosenbaum-table-age-exp-TvCh-big-20-10}
 \begin{tablenotes}
-\item Note:
+\item  \tiny Note:  This table displays summaries of treatment effects by age and gender for the full set of outcomes and compared to those who stayed at home. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution  across treatment status of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -198,7 +224,7 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \caption{Category Summary of Treatment-Control (Stay at Home) Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-cats-exp-TvCh-big}
 \input{output/raw-rosenbaum-table-cats-exp-TvCh-big-20-10}
 \begin{tablenotes}
-\item Note:
+\item  \tiny Note:  This table displays summaries of treatment effects by outcome category and gender for the full set of outcomes and compared to those who stayed at home. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution  across treatment status of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -209,7 +235,7 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \caption{Age Summary of Treatment-Control (Alternative Care) Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-age-exp-TvCa-big}
 \input{output/raw-rosenbaum-table-age-exp-TvCa-big-20-10}
 \begin{tablenotes}
-\item Note:
+\item  \tiny Note:  This table displays summaries of treatment effects by age and gender for the full set of outcomes and compared to those who attended alternative care. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution  across treatment status of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -220,10 +246,12 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \caption{Category Summary of Treatment-Control (Alternative Care) Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-cats-exp-TvCa-big}
 \input{output/raw-rosenbaum-table-cats-exp-TvCa-big-20-10}
 \begin{tablenotes}
-\item Note:
+\item  \tiny Note:  This table displays summaries of treatment effects by outcome category and gender for the full set of outcomes compared to those who attended alternative preschool. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution  across treatment status of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
+
+\clearpage
 
 \input{AppResOutput/1_abccare_appendix_treatmenteffects}
 \doublespacing
@@ -233,7 +261,7 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \subsubsection{Alternative Definitions of Control Substitution}
 \label{appendix:vsensitivity-controlsub}
 
-\noindent In the main paper, we let $V$ be a dummy variable indicating whether or not the child attended alternative childcare arrangements. As we discuss in Section~\ref{sec:data}, this dummy variable is a summary of a more complex reality in which children attend alternatives different months between ages 0 to 5. In this appendix, we explore three different alternative definitions of $V$: we let $V$ indicate if children attend alternatives (i) $2/5$ of the time between ages 0 to 5; (ii) $3/5$ of the time between ages 0 to 5; and (iii) $4/5$ of the time between ages 0 to 5. For each of these cases, we present a summary table of treatment effects analogous to Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} in the main paper.\\
+\noindent In the main paper, we let $V$ be a dummy variable indicating whether or not the child attended alternative childcare arrangements. As we discuss in Section~\ref{sec:data}, this dummy variable is a summary of a more complex reality in which children attend alternatives different months between ages 0 to 5. In this appendix, we explore three different alternative definitions of $V$: we let $V$ indicate if children attend alternatives (i) $2/5$ of the time between ages 0 to 5; (ii) $3/5$ of the time between ages 0 to 5; and (iii) $4/5$ of the time between ages 0 to 5. For each of these cases, we present a summary table of treatment effects.\\
 
 \noindent The results are robust to different choices for modeling $V$. What matters is the extensive margin decision to enroll children into alternative childcare arrangements, and not the intensive margin decision of the number of months they attend between ages 0 to 5.
 
@@ -284,7 +312,7 @@ Note: This table shows the treatment effects for categories outcomes that are im
 \subsubsection{Two-Sided Statistical Tests}
 \label{app:vsensitivity-twosided}
 
-\noindent In the main paper, we classify the outcomes of interest as ``beneficial'' (see Appendix~\ref{appendix:results} our classification) and perform one-sided tests. The next table presents two-sided inferences for the main table of treatment-effect estimates in the main paper, Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales}. The main treatment effects survive two-sided testing. A full replication of the results throughout the main text using two-sided statistical tests is available under request. As is evident from the standard errors, our combining functions and cost-benefit analysis results generally survive two-sided testing.
+\noindent In the main paper, we classify the outcomes of interest as ``beneficial'' (see Appendix~\ref{appendix:results} our classification) and perform one-sided tests. The next table presents two-sided inferences. The main treatment effects survive two-sided testing. A full replication of the results throughout the main text using two-sided statistical tests is available under request. As is evident from the standard errors, our combining functions and cost-benefit analysis results generally survive two-sided testing.
 
 \newgeometry{top=.6in, bottom=.8in, left=.8in, right=.8in}
 \begin{table}[!htbp]
