paper as sent to JJH after edits and removing page numbers of referee reports

--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -75,6 +75,20 @@ Email: aziff@uchicago.edu                     &  \\
 
 \clearpage
 
+\vspace{3 em}
+\noindent \textbf{[JJH: I need the web appendix---not printed.][This is printed now.]} \\
+
+\noindent \textbf{[JJH: Before we spoke about low quality childcare harming boys. Now suddenly this has gone and replacing it wis high quality home environments for boys. Are we so sure?]} \\
+
+\noindent \textbf{This does not contradict what we have before. Before we stated the finding as ``boys being harmed by low quality program.'' But there is much more to this. In general, girls are more disadvantaged than boys so it needs to be the case that they face a worst treatment counterfactual, whether they stay at home or go to an alternative preschool (Panel (b) of Figure 2).} \\
+
+\noindent \textbf{When exploring within-girls and within-boys is when we are able to better understand the interpretation of the different parameters that we estimated. Boys who are more disadvantaged more often go to alternatives (Panel (d), Figure 2). For girls, the reverse is true (Panel (c) of Figure 2). Then, boys benefit more from treatment if compared than alternatives than if compared to staying at home (at home their environment is better, else they are more disadvantaged and also they face a low quality alternative) --- as we discussed in the previous version. Girls benefit more from alternatives because else they would face a relatively worst home environment --- which we also discussed in the previous version.} \\
+
+\noindent \textbf{We perform tests to verify that the patterns in Figure 2 are statistically significant and all of the batteries of tests agree to this interpretation: average effects sizes (which are nuts but a referee seems to obsess about them), combining functions (of the two types that we discusses), and the new tests (Rosenbaum).}
+\vspace{3 em}
+
+\clearpage
+
 \restoregeometry
 \doublespacing
 
